[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "regexlint"
description = "Linter for (Pygments) regular expressions"
readme = "README.rst"
license = {text = "Apache"}
authors = [{name = "Tim Hatch", email = "tim@timhatch.com"}]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
keywords = []
urls = {Homepage = "https://github.com/thatch/regexlint/"}
requires-python = ">=3.6"
dependencies = ["Pygments"]
dynamic = ["version"]

[project.scripts]
regexlint = "regexlint.cmdline:main"

[project.optional-dependencies]
testing = ["pytest"]

[tool.setuptools]
packages = ["regexlint"]
include-package-data = false

[tool.setuptools_scm]


[tool.isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = false
include_trailing_comma = true
use_parentheses = true
